--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@ body {
   box-sizing: border-box;
 }
 .menu-container {
-  background-color: #F3F2F3;
+  background-color: #f3f2f3;
   height: 80px;
   display: flex;
   align-items: center;
 }
 .menu-container > * {
   height: 80%;
-  width: 20%;
+  min-width: 20%;
   border-right: 1px solid rgb(128, 160, 167);
 }
 
@@ -35,17 +35,16 @@ body {
   justify-content: space-between;
 }
 .BUI_container > * {
-  width: 30%;  
+  width: 30%;
 }
 
-.active-btn{
+.active-btn {
   background-color: #b9b9b9;
 }
 
 .color-container {
   display: flex;
   justify-content: space-between;
-  /* border: 1px solid red; */
 }
 .color-container > * {
   width: 45%;
@@ -60,24 +59,20 @@ body {
   width: 20%;
 }
 
-
-
-
-
 /*********************************************/
 .formula-container {
-  background-color: #F3F2F3;
+  background-color: #f3f2f3;
   height: 30px;
   display: flex;
   align-items: center;
-  justify-content:center
+  justify-content: center;
 }
 .address-box {
   width: 10%;
   margin-left: 10px;
 }
 .seperator {
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   padding: 5px;
@@ -86,12 +81,7 @@ body {
 .formula-box {
   width: 88vw;
   margin-right: 17px;
-  
 }
-
-
-
-
 
 /***********************************************/
 .grid_container {
@@ -108,7 +98,7 @@ body {
 
 .top-row {
   height: 30px;
-  background-color: #CEEAD6;
+  background-color: #ceead6;
   /* border: 1px solid rgb(132, 0, 255); */
   display: flex;
   position: absolute;
@@ -120,7 +110,7 @@ body {
 .left-col {
   width: 25px;
   /* border: 1px solid red; */
-  background-color: #CEEAD6;
+  background-color: #ceead6;
   font: 0.8em sans-serif;
   font-weight: bold;
 }
@@ -135,9 +125,8 @@ body {
   min-width: 80px; /* used min cauz wont wrk in flex otherwise*/
   max-width: 80px;
   border: 0.1px solid black;
-  
+
   min-height: 30px; /*same as top left block*/
-  
 }
 .left-col_box {
   /*1,2,3,4...*/
@@ -157,10 +146,6 @@ body {
   left: 25px;
 }
 
-
-
-
-
 /***********************************************************/
 .sheets {
   height: 30px;
@@ -172,7 +157,7 @@ body {
   min-width: 30px;
   display: flex;
   align-items: center;
-  justify-content:center;
+  justify-content: center;
   /* border: 1px solid red; */
 }
 .icon {
@@ -180,7 +165,6 @@ body {
   color: rgb(55, 175, 105);
   margin-left: 30px;
   margin-right: 10px;
-  
 }
 .sheets-list {
   display: flex;
@@ -219,4 +203,11 @@ body {
 }
 .u {
   text-decoration: underline;
+}
+
+/* ````````````````````` */
+@media screen and (max-width: 750px) {
+  .menu-container > * {
+    min-width: 40%;
+  }
 }
